# pocketsmith-skill

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pocketsmith/: __init__.py  api.py  cli.py
tests/: test_api.py  test_auth.py  test_cli.py  test_client.py
