[project]
name = "pocketsmith-cli"
version = "1.1.0"
description = "CLI tool for accessing PocketSmith financial data via the API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lex Toumbourou", email = "lextoumbourou@gmail.com" }
]
keywords = ["pocketsmith", "finance", "cli", "budgeting", "transactions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pocketsmith = "pocketsmith.cli:main"

[project.urls]
Homepage = "https://github.com/lextoumbourou/pocketsmith-skill"
Repository = "https://github.com/lextoumbourou/pocketsmith-skill"
Issues = "https://github.com/lextoumbourou/pocketsmith-skill/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocketsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
